# propab-oss

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BACKLOG.md  LICENSE  README.md  TOOLS.md  docker-compose.astabench.yml  docker-compose.campaign-run.yml  docker-compose.mount-dev.yml  docker-compose.prod.yml  docker-compose.yml  propab_ownership_contracts.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260424120000_initial_schema.py  20260425120000_hypotheses_tool_trace_id.py  20260501000000_long_running_agent_tables.py  20260530000000_research_campaigns.py  20260531000000_literature_query_cache.py  20260703000000_campaign_stop_reason.py  20260703120000_campaign_health_metrics.py  20260704130000_lifetime_knowledge_postgres.py  20260704140000_lifetime_claim_id_text.py  20260708000000_hypothesis_trajectories.py
artifacts/: ap_free_preflight_n50000.json  astabench_literature_scores.json  biology_live_validation.json  biology_live_validation.md  campaign_analysis.md  campaign_v1_math_analysis.md  codebase_investigation.md  discovery_roadmap.md  econometrics_discoverybench_hms.json  engineering_log.md  literature_coverage.json  litqa2_live_results.json  math_domain_live_e2e.json  paper_trace_content_report_q1_q5.md  routing_corpus_status.json  run2_forensic_report.md  run_5q_sessions.json  run_biology_live_validation.py
artifacts/bench/: binding_baseline.json  generation_baseline.json  verdict_baseline.json
artifacts/domain_gap_maps/: math_combinatorics.json
bench/: README.md  bench_binding.py  bench_generation.py  bench_verdict.py
demo/: __init__.py
demo/benchmark/: __init__.py  baseline.py  domain.py  gold.py  load.py  metric.py  report.py  verifier.py
docs/: adding_a_domain.md  anomaly_engine.md  api_reference.md  beta-setup.md  campaign-ad5fd802-convergence-analysis.md  campaign_era_partitioning.md  component_map.md  demo_execution.md  discovery-campaign-6b24ab0e-postmortem.md  discovery-target-survey.md  frontend-design-guide.md  operator_runbook.md  propab_ownership_contracts.md  search_dynamics.md
docs/architecture/: architecture-decision-register.md  domain-capabilities.md  general-agent-redesign.md  orchestrator-brain-redesign.md
docs/audits/: gpt56-frontier-science-audit-prompt.md  latent-bug-audit.md
docs/benchmarks/: active-external-benchmarks.md  genebench-pro-strategy.md
docs/discovery/: targets.md  verification-discipline.md
docs/domains/: biology.md  math.md
docs/frontend/: cockpit-redesign.md
docs/ops/: deploy.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  store.ts  styles.css  theme.tsx  types.ts  uiStore.ts
integrations/astabench/: __init__.py  answer_extract.py  audit.py  campaign_client.py  data_mount.py  discoverybench_solve.py  propab_solver.py  replay_solver.py
integrations/genebench/: run_baseline.py  run_propab.py  sandbox_data.py
migrations/: 001_initial.sql  006_campaigns.sql  007_literature_query_cache.sql
prompts/: orchestrator_role.md  orchestrator_role.merged_passed.md  synthesis_task.md
requirements/: base.txt  dl.txt
scripts/: analyze_combinatorics_campaign.py  analyze_contagion_campaign_deep.py  analyze_duplicate_pairs.py  analyze_entropy_residuals.py  analyze_mandrake_redesign_campaign.py  analyze_v2_residual_batch.py  apply_campaign_migration.ps1  audit_astabench_propab_run.py  audit_campaign_timing.py  audit_evidence_binding.py  audit_interpreter_diagnostic_executability.py  audit_mandrake_final_beliefs.py  audit_partb_live_campaign.py  bench_campaign_convergence.py  build_demo_assets.py  build_demo_main_assets.py  build_matbench_mp_bandgap_cache.py  build_mechanism_bench.py  build_real_domain_datasets.py  build_v1_literature_prior.py  calibrate_simulator.py  campaign_conditioning_followup_bench.py  campaign_failure_synthesis_bench.py  campaign_gate_check.py  campaign_synthesis_clean_bench.py  check_discoverybench_scorer.py  checkpoint_campaign_lofo.py  classify_dead_findings.py  collect_mechanism_audit.py  compare_campaigns.py  compare_v1_literature_campaigns.py  contagion_confirmed_permutation_audit.py  dead_finding_diagnosis_bench.py  domain_checklist_combinatorics.py  domain_checklist_genomics.py  engineering_status.py  ensure_v2_candidate.py  evaluate_v1_domain_candidates.py  export_policy_residuals.py  extract_entropy_trajectories.py  (+102 more)
scripts/v1_literature_prior/: README.md  __init__.py  build.py  compare.py  domains.py  extract.py  fetch.py
services/api/: Dockerfile
services/literature/: CHANGELOG.md  Dockerfile  README.md  requirements.txt
services/orchestrator/: Dockerfile  __init__.py  accumulated_ledger.py  anomaly_seeds.py  answer_gate.py  bm25_sqlite.py  budget.py  campaign_diagnostics.py  campaign_loop.py  hypotheses.py  hypothesis_ranking.py  intake.py  main.py  (+16 more)
tests/: __init__.py  test_accumulated_ledger.py  test_anomaly_engine.py  test_api_research_bugfixes.py  test_artifact_verification.py  test_astabench_integration.py  test_b3_wiring.py  test_biology_objective_spec.py  test_biology_rediscovery.py  test_budget.py  test_c1_verdict_authority.py  test_c2_orchestrator_verdict_authority.py  test_c3b_orchestrator_reasoning.py  test_campaign_accuracy_plausibility.py  test_campaign_client.py  test_campaign_core_latent_bugs_v2.py  test_campaign_era.py  test_campaign_health_and_preflight.py  test_campaign_latent_bug_fixes.py  test_campaign_recount.py  test_campaign_redesign.py  test_campaign_snapshot.py  test_campaign_synthesis_builder.py  test_campaign_zero_findings_signal.py  test_certified_witness_verdict.py  test_claim_grounding.py  test_claim_types.py  test_classify_verification_method.py  test_coding_theory_plugin.py  test_construction_synthesis.py  test_cp_sat_finder.py  test_demo_benchmark.py  test_deterministic_gate_v3.py  test_direction_calibration.py  test_disc2_rediscovery.py  test_domain_modules.py  test_domain_null_shuffle.py  test_domain_objective_spec.py  test_domain_plugin_audit_fixes.py  test_domain_profiles.py  (+99 more)
(+153 files in other folders)
