[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "propab"
version = "0.1.0"
description = "Propab autonomous research system"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pymupdf>=1.24.0",
  "celery[redis]>=5.4.0",
  "httpx>=0.28.0",
  "redis>=5.2.0",
  "sqlalchemy>=2.0.36",
  "asyncpg>=0.30.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  "rank-bm25>=0.2.2",
  "qdrant-client>=1.12.0",
  "minio>=7.2.0",
  "docker>=7.1.0",
  "numpy>=1.26.0",
  "jinja2>=3.1.0",
  "scipy>=1.11.0",
  "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]
rerank = [
  "sentence-transformers>=3.0.1",
]
dl = [
  "torch>=2.2.0",
  "torchvision>=0.17.0",
]

[tool.setuptools]
packages = [
  "propab",
  "propab.tools",
  "propab.tools.general_computation",
  "propab.tools.mathematics",
  "propab.tools.statistics",
  "propab.tools.data_analysis",
  "propab.tools.deep_learning",
  "propab.tools.algorithm_optimization",
  "propab.tools.ml_research",
  "services",
  "services.api",
  "services.api.app",
  "services.api.app.routes",
  "services.orchestrator",
  "services.worker",
]

[tool.setuptools.package-dir]
propab = "packages/propab-core/propab"
"propab.tools" = "packages/propab-core/propab/tools"
"propab.tools.general_computation" = "packages/propab-core/propab/tools/general_computation"
"propab.tools.mathematics" = "packages/propab-core/propab/tools/mathematics"
"propab.tools.statistics" = "packages/propab-core/propab/tools/statistics"
"propab.tools.data_analysis" = "packages/propab-core/propab/tools/data_analysis"
"propab.tools.deep_learning" = "packages/propab-core/propab/tools/deep_learning"
"propab.tools.algorithm_optimization" = "packages/propab-core/propab/tools/algorithm_optimization"
"propab.tools.ml_research" = "packages/propab-core/propab/tools/ml_research"
"services" = "services"
"services.api" = "services/api"
"services.api.app" = "services/api/app"
"services.api.app.routes" = "services/api/app/routes"
"services.orchestrator" = "services/orchestrator"
"services.worker" = "services/worker"

[tool.setuptools.package-data]
propab = ["templates/*.j2"]
